# docker-teach

./: Dockerfile  docker-compose.yml  pyproject.toml
app/: main.py
app/routes/v1/: __init__.py
docker/: Dockerfile.dotnet
exemples/: commands.ipynb
